<resources>
    <string name="app_name">Smart Alarm</string>
    <string name="login">Login</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="errorEmail">Enter a valid email address</string>
    <string name="errorPassword">Between 4 and 10 alphanumeric characters</string>

    <string name="hint_et_password">Password</string>
    <string name="hint_et_email">Email</string>
    <string name="sing_up">Create Account</string>
    <string name="have_account">Already a member? Login</string>

    <string name="sing_up_failed">SingUp failed</string>
    <string name="sing_up_successful">SingUp successful</string>

    <string name="login_failed">Login failed</string>
    <string name="login_successful">Login successful</string>


    <string name="add_modified_tv">Add/Modified Alarm</string>
    <string name="name_alarm">Set the name of your alarm</string>
    <string name="show_temperature">Show temperature</string>
    <string name="temperature_on">Temperature option activated</string>
    <string name="temperature_off">Temperature option deactivated</string>
    <string name="welcome_back">Welcome back!</string>

    <string name="forgot_password">Forgot your password?</string>
    <string name="introduce_email">Please, introduce your email in the email entrance</string>
</resources>
